fixed content overflowing on smaller screens

--- a/src/Components/FoodItem/FoodItem.css
+++ b/src/Components/FoodItem/FoodItem.css
@@ -4,7 +4,7 @@
 }
 
 .food-info {
-  min-width: 150px;
+  min-width: 125px;
   margin-right: 20px;
   display: flex;
   overflow: hidden;
